@@ -1,3 +1,7 @@
+2012-11-30
+* rewrite fossology scan for nomos to scan more files at once. Chunks of 10
+seem to work best according to some very unscientific testing.
+
 2012-11-29
 * add script to verify format of LIST files as generated by generatelist.py.
 This is useful if these files were manually edited for correctness.
